# Calico

./: .gitignore  CLONE.md  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Dockerfile  Doxyfile  LICENSE  README.md  clone.json  clone_before.json  cmake_install.cmake  index.html  post_clone.json  pyproject.toml  setup.py
.devcontainer/: devcontainer.json  post-start-command.sh
.github/workflows/: auto-gen-docs.yml  main.yml  wheels.yml
calico/: __init__.py  batch_optimizer.cpp  batch_optimizer.h  batch_optimizer_test.cpp  bspline.h  bspline.hpp  bspline_test.cpp  calico.cpp  geometry.h  geometry_test.cpp  matchers.h  optimization_utils.h  profiler.h  status_builder.h  statusor_macros.h  test_utils.h  trajectory.cpp  trajectory.h  trajectory_test.cpp  typedefs.h  typedefs_test.cpp  world_model.cpp  world_model.h  world_model_test.cpp
calico/chart_detectors/: aprilgrid_detector.cpp  aprilgrid_detector.h
calico/python/: calico.cpp  python_bindings_test.py  utils.py
calico/sensors/: accelerometer.cpp  accelerometer.h  accelerometer_cost_functor.cpp  accelerometer_cost_functor.h  accelerometer_cost_functor_test.cpp  accelerometer_models.cpp  accelerometer_models.h  accelerometer_test.cpp  camera.cpp  camera.h  camera_cost_functor.cpp  camera_cost_functor.h  camera_cost_functor_test.cpp  camera_lib_test.cpp  camera_models.cpp  camera_models.h  camera_models_test.cpp  camera_test.cpp  gyroscope.cpp  gyroscope.h  gyroscope_cost_functor.cpp  gyroscope_cost_functor.h  gyroscope_cost_functor_test.cpp  gyroscope_models.cpp  gyroscope_models.h  gyroscope_models_test.cpp  gyroscope_test.cpp  sensor_base.h
calico/sensors/camera/: camera_lib_test.cpp  camera_models.cpp  camera_models.h
calico/test/: accelerometer_cost_functor_test.cpp  accelerometer_models_test.cpp  accelerometer_test.cpp  batch_optimizer_test.cpp  camera_cost_functor_test.cpp  camera_models_test.cpp  camera_test.cpp  geometry_test.cpp  gyroscope_cost_functor_test.cpp  gyroscope_models_test.cpp  gyroscope_test.cpp  python_bindings_test.py  trajectory_test.cpp  world_model_test.cpp
demos/: imu_camera_calibration.ipynb  kalibr_multicam_demo.ipynb  multicamera_calibration.py
doc/: Doxyfile
doc/html/: Edge_8h_source.html  FloatImage_8h_source.html  GLine2D_8h_source.html  GLineSegment2D_8h_source.html  Gaussian_8h_source.html  GrayModel_8h_source.html  Gridder_8h_source.html  Homography33_8h_source.html  MathUtil_8h_source.html  Quad_8h_source.html  Segment_8h_source.html  Tag16h5_8h_source.html  Tag16h5__other_8h_source.html  Tag25h7_8h_source.html  Tag25h9_8h_source.html  Tag36h11_8h_source.html  Tag36h11__other_8h_source.html  Tag36h9_8h_source.html  TagDetection_8h_source.html  TagDetector_8h_source.html  TagFamily_8h_source.html  UnionFindSimple_8h_source.html  XYWeight_8h_source.html  accelerometer_8h_source.html  accelerometer__cost__functor_8h_source.html  accelerometer__models_8h_source.html  annotated.html  aprilgrid__detector_8h_source.html  batch__optimizer_8h_source.html  bspline_8h_source.html  bspline_8hpp_source.html  camera_8h_source.html  camera__cost__functor_8h_source.html  camera__models_8h_source.html  classAprilTags_1_1Edge-members.html  classAprilTags_1_1Edge.html  classAprilTags_1_1FloatImage-members.html  classAprilTags_1_1FloatImage.html  classAprilTags_1_1GLine2D-members.html  classAprilTags_1_1GLine2D.html  (+499 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+50 more)
doc/latex/: annotated.tex  classAprilTags_1_1Edge.tex  classAprilTags_1_1FloatImage.tex  classAprilTags_1_1GLine2D.tex  classAprilTags_1_1GLineSegment2D.tex  classAprilTags_1_1Gaussian.tex  classAprilTags_1_1GrayModel.tex  classAprilTags_1_1Gridder.tex  classAprilTags_1_1Gridder_1_1Iterator.tex  classAprilTags_1_1MathUtil.tex  classAprilTags_1_1Quad.tex  classAprilTags_1_1Quad__coll__graph.md5  classAprilTags_1_1Segment.tex  classAprilTags_1_1TagCodes.tex  classAprilTags_1_1TagDetector.tex  classAprilTags_1_1TagDetector__coll__graph.md5  classAprilTags_1_1TagFamily.tex  classAprilTags_1_1TagFamily_1_1TableInitializer.tex  classAprilTags_1_1TagFamily__coll__graph.md5  classAprilTags_1_1UnionFindSimple.tex  classDualCoding_1_1Sketch.tex  classHomography33.tex  classIsOkAndHoldsMatcher.tex  classIsOkAndHoldsMatcherImpl.tex  classIsOkAndHoldsMatcherImpl__coll__graph.md5  classIsOkMatcher.tex  classMonoIsOkMatcherImpl.tex  classMonoIsOkMatcherImpl__coll__graph.md5  classcalico_1_1BSpline.tex  classcalico_1_1BatchOptimizer.tex  classcalico_1_1DefaultSyntheticTest.tex  classcalico_1_1Pose3.tex  classcalico_1_1Profiler.tex  classcalico_1_1Trajectory.tex  classcalico_1_1WorldModel.tex  classcalico_1_1chart__detectors_1_1AprilGridDetector.tex  classcalico_1_1sensors_1_1Accelerometer.tex  classcalico_1_1sensors_1_1AccelerometerCostFunctor.tex  classcalico_1_1sensors_1_1AccelerometerModel.tex  classcalico_1_1sensors_1_1AccelerometerModel__inherit__graph.md5  (+74 more)
python/: CMakeLists.txt  calico.cpp  pyproject.toml  setup.py
python/calico/: __init__.py  utils.py
python/calico/test/: python_bindings_test.py  python_utils_test.py
python/src/: calico.cpp
scripts/: build-docker.sh  build-python.sh  install-ceres.sh
