[build-system]
requires = [
  "setuptools",
  "wheel",
  "pybind11",
  "pybind11[global]",
  "cmake>=3.12"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages= ["calico"]
package-dir = {"" = "python"}

[project]
name = "calico"
version = "0.1.0"
description="A visual-inertial calibration library designed for rapid problem construction and debugging."
readme = "README.md"
authors = [
  {name = "James Yang", email = "james.yang92@gmail.com"},
]
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Unix",
  "Programming Language :: Python",
]
dependencies = [
  'numpy ~= 1.26.0',
  "opencv-python",
  "pyyaml",
]

[project.optional-dependencies] # Optional
test = [
  'pytest>=6.0',
  "scipy"
]


[project.urls]
"Homepage" = "https://github.com/yangjames/Calico.git"
